@@ -37,10 +37,10 @@
 
 # Sub-directories
 
-SUBDIRS = adc buttons can composite dhcpd ftpc ftpd hello helloxx hidkbd \
-	igmp lcdrw mm mount nettest nsh null nx nxffs nxflat nxhello nximage \
-	nxlines nxtext ostest pashello pipe poll pwm qencoder rgmp romfs \
-	serloop telnetd thttpd tiff touchscreen udp uip usbserial \
+SUBDIRS = adc buttons can cdcacm composite dhcpd ftpc ftpd hello helloxx \
+	hidkbd igmp lcdrw mm mount nettest nsh null nx nxffs nxflat nxhello \
+	nximage nxlines nxtext ostest pashello pipe poll pwm qencoder rgmp \
+	romfs serloop telnetd thttpd tiff touchscreen udp uip usbserial \
 	sendmail usbstorage usbterm wget wlan
 
 # Sub-directories that might need context setup.  Directories may need
@@ -56,7 +56,7 @@ SUBDIRS = adc buttons can composite dhcpd ftpc ftpd hello helloxx hidkbd \
 CNTXTDIRS = pwm
 
 ifeq ($(CONFIG_NSH_BUILTIN_APPS),y)
-CNTXTDIRS += adc can composite ftpd dhcpd nettest qencoder telnetd
+CNTXTDIRS += adc can cdcacm composite ftpd dhcpd nettest qencoder telnetd
 endif
 
 ifeq ($(CONFIG_EXAMPLES_HELLOXX_BUILTIN),y)
